[metadata]
name = libipc-ctypes
version = 1.0.0
author = libipc contributors
author_email = 
description = Python ctypes wrapper for libipc - High-performance IPC library using shared memory
long_description = file: README.md
long_description_content_type = text/markdown
keywords = libipc, IPC, shared memory, inter-process communication, ctypes, high-performance
url = https://github.com/mutouyun/cpp-ipc
project_urls =
    Bug Tracker = https://github.com/mutouyun/cpp-ipc/issues
    Documentation = https://github.com/mutouyun/cpp-ipc/wiki
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages = libipc_ctypes
python_requires = >=3.6

[options.package_data]
* = *.dll, *.so, *.dylib
